@@ -1,3 +1,1 @@
-- stdin/stdout on -
-  - unbini
 - improve string table functions (hash table)
